syntax = "proto3";

package etcd;

message TestMessage {
  string id = 1;
  string name = 2;
}
